# PDP

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  PDP_exports_local_dev.sh  README.md  build_opal_bundle.sh  index.yaml  kong_routes.json  pdp-v0.8.4-27.tgz  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  trino-authz.example.yaml  trivy-secret.yaml
.cursor/rules/: authzen.mdc  horizon_python.mdc  overview.mdc  python.mdc  rust.mdc
.github/workflows/: deploy_sidecar.yml  dockerhub_push.yml  ecr_push.yml  helm_release.yml  pdp-tester.yml  pdp_cicd.yml  pdp_cicd_manual.yml  pdp_cicd_temp.yml  pdp_tests.yml  pre-commit.yml  release.yml  test_release.yml  test_release_skipping.yml  tests.yml
charts/: README.md
charts/pdp/: Chart.yaml  values.yaml
charts/templates/: deployment.yaml  secret.yaml  service.yaml
docker-files/: testing.list
helm/: Chart.yaml  values-prod.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
horizon/: authentication.py  config.py  main.py  opal_relay_api.py  pdp.py  ssl.py  state.py  token_utils.py  topics.py
horizon/connectivity/: api.py
horizon/data_manager/: client.py  data_update.py  policy_store.py  runner.py  (+1 more)
pdp/: Cargo.toml
pdp-engine/: .env.example  Cargo.toml  README.md
pdp-engine/examples/: run_pdp.rs
pdp-engine/src/: args.rs  builder.rs  error.rs  health.rs  lib.rs  mock_engine.rs  python_engine.rs  runner.rs
pdp-engine/tests/: README.md  integration_tests.rs
pdp-server/: .dockerignore  Cargo.toml
pdp-server/src/: errors.rs  headers.rs  main.rs  openapi.rs  state.rs  test_utils.rs
pdp-server/src/api/: authn_middleware.rs  health.rs  horizon_fallback.rs  mod.rs
pdp-server/src/api/authz/: allowed.rs  allowed_bulk.rs  authorized_users.rs  forward_to_opa.rs  mod.rs  user_permissions.rs
pdp-server/src/api/authzen/: common.rs  errors.rs  evaluation.rs  evaluations.rs  metadata.rs  mod.rs  schema.rs  search_action.rs  search_resource.rs  search_subject.rs
pdp-server/src/api/health/: checkers.rs  handlers.rs  mod.rs  models.rs
pdp-server/src/api/oauth/: handlers.rs  mod.rs  models.rs  permit_client.rs  token_manager.rs
pdp-server/src/api/trino/: allowed.rs  checks.rs  column_mask.rs  mod.rs  row_filter.rs
pdp-server/src/api/trino/schemas/: action.rs  column_mask.rs  context.rs  core.rs  mod.rs  resource.rs  row_filter.rs
pdp-server/src/cache/: memory.rs  mod.rs  null.rs  redis.rs
pdp-server/src/config/: cache.rs  horizon.rs  mod.rs  oauth.rs  opa.rs  trino_authz.rs
pdp-server/src/opa_client/: allowed.rs  allowed_bulk.rs  authorized_users.rs  cached.rs  mod.rs  user_permissions.rs
pdp/src/: auth.rs  (+5 more)
scripts/: gunicorn_conf.py  run_sidecar_v2.sh  start.sh
test_offline_mode/: .env.example  Dockerfile  README.md  checker.py  docker-compose.yaml
watchdog/: Cargo.toml  README.md
watchdog/src/: health.rs  lib.rs  service.rs  stats.rs
watchdog/tests/: test_server.py  test_server.rs  tests.rs
(+91 files in other folders)
