[package]
name = "pdp-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "pdp_engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
url = "2.2"
which = "7.0.2"
log = "0.4.22"
tokio-util = "0.7.12"
signal-hook = "0.3.17"
nix = { version = "0.29.0", features = ["signal"] }
once_cell = "1.21.1"
async-trait = "0.1.88"

[dev-dependencies]
nix = { version = "0.29.0", features = ["signal"] }
env_logger = "0.11.6"
testing_logger = "0.1.1"
dotenv = "0.15.0"
