[package]
name = "pdp-server"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watchdog = { path = "../watchdog" }
async-trait = "0.1.88"
axum = "0.8.3"
chrono = "0.4.40"
config = "0.15.11"
env_logger = "0.11.8"
http = "1.3.1"
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"], default-features = false }
redis = { version = "0.29.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
utoipa = {version = "5.3.1",features = ["axum_extras"]}
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
openssl = { version = "0.10", features = ["vendored"] }  # Required for docker build on Alpine

[dev-dependencies]
async-trait = "0.1.88"
redis-test = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["test-util"] }
tower = "0.5.2"
wiremock = "0.6.3"
http-body-util = "0.1.3"
