[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[lib]
name = "watchdog"
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
serde = { version = "1.0.219", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
env_logger = "0.11.8"
