[package]
name = "watchdog"
version = "0.1.0"
edition = "2024"

[lib]
name = "watchdog"
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
nix = { version = "0.29.0", features = ["signal"] }
async-trait = "0.1.79"
reqwest = { version = "0.12.15", features = ["json"] }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.8"
